# dyno_webapp

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  check.sh
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  main.rs  middlewares.rs  schema.rs  seeder.rs
backend/src/actions/: dyno.rs  history.rs  info.rs  mod.rs  user.rs
backend/src/handler/: auth.rs  dyno.rs  history.rs  info.rs  mod.rs  user.rs  ws.rs
backend/src/models/: dyno.rs  history.rs  info.rs  mod.rs  role.rs  user.rs  uuid.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
frontend/src/: fetch.rs  main.rs  route.rs  state.rs  theme.rs
frontend/src/components/: button.rs  cards.rs  chart.rs  landing_intro.rs  mod.rs  stats.rs  typography.rs
frontend/src/components/chart/: axis.rs  linear_axis_scale.rs  series.rs  time_axis_scale.rs
frontend/src/components/input/: mod.rs  search_bar.rs  select_box.rs  text_area_input.rs  text_input.rs  toggle_input.rs
frontend/src/components/notification/: component.rs  manager.rs  mod.rs  provider.rs
frontend/src/containers/: header.rs  layout.rs  mod.rs  sidebar.rs  suspend.rs
frontend/src/pages/: about.rs  activities.rs  calendar.rs  dashboard.rs  live.rs  mod.rs  not_found.rs  setting_profile.rs  signin.rs  signup.rs  sop.rs
frontend/src/pages/admin/: dynos.rs  history.rs  infos.rs  mod.rs  users.rs
frontend/src/pages/setting/: app.rs  mod.rs  profile.rs
frontend/static/: style.css  tailwind.css
migrations/2023-05-25-140713_users/: up.sql
migrations/2023-05-25-140721_dynos/: down.sql  up.sql
migrations/2023-05-25-140725_info_dyno/: down.sql  up.sql
migrations/2023-06-17-014631_histories/: down.sql  up.sql
public/root/: frontend.js  frontend_bg.wasm  index.html  tailwind.css
public/root/.stage/: frontend.js  frontend_bg.wasm
