[package]
name = "dyno-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["db_sqlite"]
db_sqlite = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35"]
db_mysql = ["diesel/mysql"]
db_pg = ["diesel/postgres"]
# auth = ["dep:argon2"]
# tls_support = ["actix-web/rustls"]

[dependencies]
futures.workspace = true
dotenv.workspace = true
env_logger.workspace = true

dyno_core = { workspace = true, features = ["backend"] }

actix-files = "0.6.2"
actix-multipart = "0.6.0"
openssl = "0.10"

[dependencies.actix-web]
version = "4"
features = ["openssl"] 

# [dependencies]
[dependencies.diesel]
version = "2.0.4"
features = ["chrono", "uuid", "r2d2"]


