[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo = "0.8"
wasm-logger = "0.2.0"
yew_icons = { version = "0.7.2", features = ["heroicons_outline", "heroicons_solid"] }
yewdux = "0.9.3"
wasm-bindgen = "0.2.87"
yew-hooks = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "Window",
    "Document",
    "Element",
    "DomRect",
    "SvgElement",
]

[dependencies.dyno_core]
workspace = true
features = ["use_wasm", "use_plot"]
